--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Cookie Clicker</title>
+<title>Math Clicker</title>
 <!--
 Code and graphics copyright Orteil, 2013
 Feel free to alter this code to your liking, but please do not re-host it, do not profit from it and do not present it as your own.
@@ -18,9 +18,9 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 	-set event listeners instead of onclick
 	-more zebras
 -->
+<link href='http://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 
 <link rel="shortcut icon" href="img/favicon.ico" />
-<link href="http://fonts.googleapis.com/css?family=Kavoon&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 <link href="style.css?v=1.5028" rel="stylesheet" type="text/css">
 
 <script src="base64.js"></script>
@@ -47,8 +47,7 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 
 <div id="topBar">
 	<div>
-		<b>Cookie Clicker</b> &copy; <a href="http://orteil.dashnet.org" target="_blank">Orteil</a>, 2013 - hosted by <a href="http://dashnet.org" target="_blank">DashNet</a> | <a href="http://twitter.com/orteil42" target="_blank">twitter</a> | <a href="http://orteil42.tumblr.com" target="_blank">tumblr</a> | Help? Bugs? Ideas? Check out the <a href="http://forum.dashnet.org" target="_blank">forum</a>! | Chat with us on <a href="http://forum.dashnet.org/discussion/277/irc-chat-channel/p1" target="_blank">IRC</a> | Getting a black screen? Try pressing ctrl-F5!
-		<div id="links" style="display:block;position:absolute;right:8px;top:4px;"></div>
+		<b>Original Cookie Clicker</b> &copy; <a href="http://orteil.dashnet.org" target="_blank">Orteil</a>, powered by <a href="http://vk.com/msu_pkrn" target="_blank">PEKARNYA</a><div id="links" style="display:block;position:absolute;right:8px;top:4px;"></div>
 	</div>
 </div>
 
@@ -113,15 +112,7 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 			</div>
 		</div>
 		
-		<div id="support">
-			<form action="https://www.paypal.com/cgi-bin/webscr" method="post" id="donate" style="margin:0px 16px;">
-			<div id="supportComment">Help us make more games!</div>
-			<input type="hidden" name="cmd" value="_s-xclick">
-			<input type="hidden" name="hosted_button_id" value="BBN2WL3TC6QH4">
-			<input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal — The safer, easier way to pay online.">
-			<img alt="" border="0" src="https://www.paypalobjects.com/nl_NL/i/scr/pixel.gif" width="1" height="1">
-			</form>			
-		</div>
+		
 	</div>
 	
 	<div id="tooltipAnchor"><div id="tooltip" onMouseOut="Game.tooltip.hide();"></div></div>
