--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-29324474-2']);
-  _gaq.push(['_setDomainName', 'dashnet.org']);
+  _gaq.push(['_setDomainName', 'uburuntu.github.io']);
   _gaq.push(['_trackPageview']);
 
   (function() {
@@ -47,7 +47,7 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 
 <div id="topBar">
 	<div>
-		<b>Original Cookie Clicker</b> &copy; <a href="http://orteil.dashnet.org" target="_blank">Orteil</a>, powered by <a href="http://vk.com/msu_pkrn" target="_blank">PEKARNYA</a><div id="links" style="display:block;position:absolute;right:8px;top:4px;"></div>
+		Created by <span style="font-weight:bold;">uburuntu</span> special for <a href="http://vk.com/msu_pkrn" target="_blank">Pekarnya</a><div id="links" style="display:block;position:absolute;right:8px;top:4px;"></div>
 	</div>
 </div>
 
