--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 	-set event listeners instead of onclick
 	-more zebras
 -->
+<meta property="og:image" content="http://uburuntu.github.io/math-clicker/img/perfectCookie.png" />
 <link href='http://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 
 <link rel="shortcut icon" href="img/favicon.ico" />
