new: https usage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 	-more zebras
 -->
 <meta property="og:image" content="http://uburuntu.github.io/math-clicker/img/thumb.png" />
-<link href='http://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 
 <link rel="shortcut icon" href="img/favicon.ico" />
 <link href="style.css?v=1.5028" rel="stylesheet" type="text/css">
